--- a/VRChat/51/963251.html
+++ b/VRChat/51/963251.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jFPwq2ShMSBfU5x5CUswGfVkM9tr0QPC5TN2OvHNSz8="></script>
+    "Pf/92xiRVzUi7J3N7vc6gc8DV5OowuOrmPyYDbfaj9E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"BB1-09　～VRChatアバター向け素体モデル～","description":"[Base Body \"BB1-09\"]\nポリゴン数6684のアニメライクな女性のボディ素体です。\nVRChatでよく見かけるアニメ系モデルに近しい身体つきをしています。\nUnity Humanoid規格、及びVRChatフルボディ・トラッキングに対応しています。\n\n8/14 …　Saikin Hutottaを同梱　配布・販売時の条件を更新\n8/12 …　販売開始\n\n\n※現在確認されている不具合\n・Saikin Hutottaを操作した状態でボーンが曲がると縮尺がおかしくなる（次回アップデートで修正予定）\n体型はシェイプキーでも変更可能ですので、修正版のアップデートまではそちらをご利用下さい。なお利用規約に変更はありません。","url":"https://booth.pm/ja/items/963251","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/e6170a80-5060-4a22-8c22-c10792111eba/i/963251/75f7eaa6-cf4b-4936-b5df-27181e72b2c3_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jFPwq2ShMSBfU5x5CUswGfVkM9tr0QPC5TN2OvHNSz8="></script>
+    nonce="Pf/92xiRVzUi7J3N7vc6gc8DV5OowuOrmPyYDbfaj9E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/963251/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               210
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/963251/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               210
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
