--- a/VRChat/82/961982.html
+++ b/VRChat/82/961982.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "r3J/iVLv+tXv8KZjjPWczEdiq/+WDYee6V5B7qk8bSY="></script>
+    "bE2NdYLpvh3mV0KM9B0ShtoL8seBiabiPgkXfPdQVek="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】ルーンストーン、ルーン文字 全34種","description":"ゲルマン共通ルーン文字を元に作成したルーンストーン、ルーン文字です。\nルーンストーンの文字部分は凹ませております。\n\nルーン文字を利用してのパーティクル制作も想定しております。\n\nルーンストーン、ルーン文字ともに、占いとしてもご活用いただけます。\nVRChatでの占い動画（収益化済み）としてもご利用可能です。\n\n\n色の変更は可能です。ご自分のお好きな色にカスタムしてください。\nテクスチャはPSDファイルで保存されております。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：ルーンストーンxx.fbx\n　　　　ルーンストーン.psd\n　　　　ルーン文字xx.fbx\n  xx＝01～34\n\n▲モデルポリゴン数\n　モデル数が多いため、最大ポリゴン数のみ表示させていただきます。\nルーンストーン　最大　266ポリゴン\nルーン文字　　　最大　32ポリゴン\n\n\nマテリアル：各1つ\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/961982","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/961982/2cfc9d3d-50b3-4066-8935-9af31ce686c0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r3J/iVLv+tXv8KZjjPWczEdiq/+WDYee6V5B7qk8bSY="></script>
+    nonce="bE2NdYLpvh3mV0KM9B0ShtoL8seBiabiPgkXfPdQVek="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/961982/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               2
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/961982/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               2
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
