--- a/VRChat/24/961624.html
+++ b/VRChat/24/961624.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "v/MWOemCjO5TXUpbq003PmkSieSxpLyI/B6RAD4H7Ag="></script>
+    "LXHK4+IyI8cz/WuYOJVxQ2IirXbmCdxl+Bs2Du8mTJ0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル『ヴァレンタイン/VT-214』","description":"【Ver1.01アップデート】\n・シェーダーの設定を一部変更しました。\n\n【Ver1.1アップデート】\n・スカートのボーンを増やしました。より滑らかに、破綻なくスカートが動きます。\n・目のテクスチャを僅かに改変しました。以前よりぐるぐるの主張が強くなっています。\n・DynamicBoneの設定を改良しました。よりおっぱいが揺れるように。\n・近づくとスカートが消失する不具合を修正しました。\n・後頭部から青ざめた表情が投下して見える不具合を修正しました。\n\nVRC向けのオリジナルアバターです。\nDynamicBoneとユニティちゃんトゥーンシェーダー2.0に対応しています。\n\n※予めUnityプロジェクトにユニティちゃんトゥーンシェーダー2.0とVRCSDK、及びDynamicBone(任意)をインポートした状態でunitypackageをインポートしてください。\n\nユニティちゃんトゥーンシェーダー2.0\n→http://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\nポリゴン数(三角面)：15770\nマテリアル数：10\n\n\n\n\n本データはVRCでの利用を想定しております。VRC以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n以下の規約に従った上で、ご自由にお使いください。\n\n◆禁止事項\n・本データの再配布は禁止です。\n・自作発言等、作者を偽る発言はおやめください。\n・ヴァレンタイン/VT-214というモデル/名称を使いを架空のキャラクターとして公の場で活動させる行為(バーチャルYouTuber活動)は禁止です。ただし、十分独自性があると認められるほど改変したモデルはその限りではありません。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n\n◆補足\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用は禁止します。","url":"https://booth.pm/ja/items/961624","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/22623f29-cbf4-42f5-96e7-40d523e8e6fe/i/961624/ce69d8f8-8cd5-48c6-b8ad-e6d2322cb0d5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v/MWOemCjO5TXUpbq003PmkSieSxpLyI/B6RAD4H7Ag="></script>
+    nonce="LXHK4+IyI8cz/WuYOJVxQ2IirXbmCdxl+Bs2Du8mTJ0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/961624/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/961624/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
