--- a/VRChat/12/960312.html
+++ b/VRChat/12/960312.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wBLdxCcdH8pfsesXpg4CXZTrM6xTE60yt6+oBYF6aTU="></script>
+    "uGrao/Wm60e8vjwiY3jjFiwpJNqlXzp5FknCCAnxBDQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ピコハン △ポリゴン数 1192 fbx","description":"【説明文】\nVRChatでの利用を目的として生み出された3Dモデル。\nピコピコハンマーのようなもの。\n\n△ポリゴン数　1192\n\n【付属品】\nunitypackageデータ\nfbxデータ\ntextureデータ\n\n【利用規約】\nご自由にどうぞ。\n\n【免責事項】\nこのデータを使用して発生したいかなる問題、損害にも当方は責任を持ちません。\nご使用は自己責任でお願いします。","url":"https://booth.pm/ja/items/960312","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fceb67cb-cfe3-44f3-9d8b-1d494d77a478/i/960312/0dc6af33-a4ce-4fbe-a6ee-7c9d353720c9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wBLdxCcdH8pfsesXpg4CXZTrM6xTE60yt6+oBYF6aTU="></script>
+    nonce="uGrao/Wm60e8vjwiY3jjFiwpJNqlXzp5FknCCAnxBDQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/960312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               230
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/960312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               230
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
