--- a/VRChat/23/959923.html
+++ b/VRChat/23/959923.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "prbTYrruB2vLv/hN+8OB8UDD+/TGIAFbkeo2jAu+3dM="></script>
+    "XDdK4JAXUxVeuwUZASCiCeOdBF3lSBB3D0ZTk5ZZR1s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ジト目のヘアアクセ","description":"～ジト目のアクセ～　\n\nこのモデルはジト目の表情をしたアクセでございます。\n\nポリゴン数：288\n\nまたここをどう改善したらいいなどアドバイス又は、バグの修正などはこちらまで\ntwitter: @Sarria____\nマシュマロ: https://marshmallow-qa.com/sarria____\n\n画像の映っているモデル\nジト目のジト改変モデル：製作者＝YU様\nhttps://oyuhan.booth.pm/items/948573","url":"https://booth.pm/ja/items/959923","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/959923/6ce54381-ec7a-476e-bee3-4b14d50bd969_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="prbTYrruB2vLv/hN+8OB8UDD+/TGIAFbkeo2jAu+3dM="></script>
+    nonce="XDdK4JAXUxVeuwUZASCiCeOdBF3lSBB3D0ZTk5ZZR1s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/959923/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/959923/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
