--- a/VRChat/94/959494.html
+++ b/VRChat/94/959494.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gYPRdd23f73jleM+VPe0Tqk2kNCaSRkwLmxyg4sadls="></script>
+    "adWAIJEgb/i2qnkssWzzHbdPOPmf3PHN6bB1ermrrd8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【代理出品】VRChatで100時間暮らして分かったVR教育 byチシ（千知）","description":"代理出品です。\nチシさん(@tishi_Za)がTwitterでマッハ新書のための草案書いたって公開してたので軽率に編集して出版ハラスメントしました。\n\n手が滑ってpdfとepubが生成されたのでTwitterに書いたら好きにしろって言われたので代理出品します。","url":"https://booth.pm/ja/items/959494","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/10390c93-8813-4f7d-bd07-4c26c97d7a3b/i/959494/21cd00e2-9a39-4e05-a200-f671efbc40dc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gYPRdd23f73jleM+VPe0Tqk2kNCaSRkwLmxyg4sadls="></script>
+    nonce="adWAIJEgb/i2qnkssWzzHbdPOPmf3PHN6bB1ermrrd8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/959494/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/959494/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
