--- a/VRChat/32/958932.html
+++ b/VRChat/32/958932.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/F4EkppIb67QM+w9eTXcju839WFiOqSJDw0m1P/UWzc="></script>
+    "mms7l8wks7hDSCC1iuzF4FCToCrTKk49MivlWT2PWg8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"nanoputian(なのぷしゃん)","description":"2003年に発表された雑誌J. Org. Chemにて発表された原子の世界の小人なのぷしゃんの二次創作モデルです。\n無改変再配布以外禁止しませんので好きにしてください。\n帽子をかぶせたりテクスチャを書き換えたりして、君だけのオリジナルなのぷしゃんをつくっちゃおう！\n詳しくは利用規約をご覧ください。\n\n※本モデルの配布は事前の予告なく終了する場合がございます。（特に学会に怒られた場合は即座に終了します）\n\n引用:(James M. Tour,Stephanie H. Chanteaunanoptian J. Org. Chem. 2003, 68, 8750)\n\n内容\n・モデルデータ（.fbx)\n・blenderデータ(.blend)\n・テクスチャ(.png)\n・利用規約(.txt)","url":"https://booth.pm/ja/items/958932","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/29d3fb48-b17c-40f3-9f9a-dea621d4a8d0/i/958932/38089b81-12e4-4ac9-bb6d-acde0559438c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/F4EkppIb67QM+w9eTXcju839WFiOqSJDw0m1P/UWzc="></script>
+    nonce="mms7l8wks7hDSCC1iuzF4FCToCrTKk49MivlWT2PWg8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/958932/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/958932/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
