--- a/VRChat/79/958479.html
+++ b/VRChat/79/958479.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dwdKqoJuWQ2NoKBZVElGFka7cEe5aqDY1JZFnfQu8nE="></script>
+    "3lIqp02RlysWjTOLq/i/aP5GhXUJTX5O/+dlDxNKJ2E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF 金塊","description":"ポリゴン数：32\nテクスチャサイズ：1024\n再配布禁止\n\n皆も昔あこがれただろ？連邦準備銀行にあるようなでかい金塊にさ。僕は憧れが強くてこの歳になって金塊ジェンガ（プラスチック製）なんて買っちゃったよ。割と満足してた。でもVRを始めてから思ったんだ。どうせならもっとデカいのがほしいって。だからVR錬金術で作ったんだ。さあ持っていけ！\n\n追記\nごめんモデル入ってなかった。今度こそ金塊だ。虚無じゃないぞ。ごめんね！","url":"https://booth.pm/ja/items/958479","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/958479/2826e47e-247f-470f-b500-d04fa7e71ec9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dwdKqoJuWQ2NoKBZVElGFka7cEe5aqDY1JZFnfQu8nE="></script>
+    nonce="3lIqp02RlysWjTOLq/i/aP5GhXUJTX5O/+dlDxNKJ2E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/958479/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               209
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/958479/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               209
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
